objects/vlocity_ins__QuoteGroupClassContribution__c.object
<CustomObject>
    <description>Represents override group class contributions to the Quote. Used for Quote level write-in overrides on a group class contribution. Master-detail child object of Quote.</description>
    <fields>
        <fullName>vlocity_ins__ContributionAmount__c</fullName>
        <description>The amount that an employer or a group will contribute towards the cost of the plan on behalf of the Group Class members/dependents.</description>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContributionPercent__c</fullName>
        <description>The percentage of the cost of the plan that an employer or a group will contribute on behalf of the Group Class members/dependents.</description>
        <label>Contribution Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContributionType__c</fullName>
        <description>Defines the type of the contribution in which an employer or a group will contribute towards the plan such as percentage of the cost or a flat amount.</description>
        <label>Contribution Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassContributionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the GroupClassContribution for which the write-in override is defined.</description>
        <label>Group Class Contribution</label>
        <referenceTo>vlocity_ins__GroupClassContribution__c</referenceTo>
        <relationshipLabel>Quote Group Class Contributions</relationshipLabel>
        <relationshipName>QuoteGroupClassContributions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MemberType__c</fullName>
        <description>Defines the type of the member for which the contribution is defined such as subscriber or dependent.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCategory__c</fullName>
        <description>Category of an Insurance product such as medical, dental or vision.</description>
        <label>Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <description>Id of the related quote</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Group Class Contributions</relationshipLabel>
        <relationshipName>QuoteGroupClassContributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Group Class Contribution</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Group Class Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>